Tue May 13 15:04:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Notify/Bug_3252_Regression/server.cpp:
          Extended this test as mentioned in bugzilla 3252. Thanks for
          Lothar Werzinger <lothar at tradescape dot biz> for extending
          this test

Tue May 13 14:50:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/CosNotify_Service.cpp (fini):
          Also destroy the dispatching ORB when it has one and
          the nofication service is configured to use one

        * tests/Explicit_Event_Loop/server.cpp:
          No need to pass in an empty orb name

Tue May 13 07:37:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          Don't try to load the TAO PI library in VxWorks kernel mode
          with shared libraries

        * tests/ORB_Local_Config/Bug_1459/run_test.pl:
        * tests/ORB_Local_Config/Bug_2612/run_test.pl:
        * tests/ORB_Local_Config/Bunch/run_test.pl:
        * tests/ORB_Local_Config/run_tests_all.pl:
        * tests/ORB_Local_Config/Separation/run_test.pl:
        * tests/ORB_Local_Config/Service_Dependency/run_test.pl:
        * tests/ORB_Local_Config/Shared/run_test.pl:
        * tests/ORB_Local_Config/Simple/run_test.pl:
        * tests/ORB_Local_Config/Two_DLL_ORB/run_test.pl:
          Updated for VxWorks cross platform testing

        * tests/TransportCurrent/lib/Server_Request_Interceptor.h:
          Layout change

Mon May 12 15:51:28 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * tao/Stub.cpp:

          Removed one line that I added along with a fix of memory leak.
          This particular line turned out to be erroneous.

Mon May 12 12:30:01 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Monitor/Marshal_Buffer/client.cpp:

          Added appropriate preprocessor guards to get a successful
          build when TAO_HAS_MONITOR_FRAMEWORK is defined as 0.
