@@ -1,3 +1,9 @@
+Wed May 14 11:03:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Monitor/*:
+          Renamed MonitorControl namespace to Monitor_Control to comply
+          to ACE coding guidelines
+
 Tue May 13 15:04:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/tests/Notify/Bug_3252_Regression/server.cpp:
